fix: congela caixa fechado e conta servicos pelo caixa